--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "express": "^4.16.2",
     "mongoose": "^4.13.7",
+    "parse-dms": "^0.0.5",
     "swisseph": "^0.5.8"
   }
 }
