--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.2",
     "parse-dms": "^0.0.5",
     "swisseph": "^0.5.8"
