--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,6 @@
     "cors": "^2.8.5",
     "express": "^4.16.2",
     "parse-dms": "^0.0.5",
-    "swisseph": "^0.5.8"
+    "swisseph-v2": "^1.0.4"
   }
 }
